Closed
Bug 137661
Opened 24 years ago
Closed 18 years ago
Mail window opened from biff icon (new mail notification in system tray) can't be maximized/minimised/resized
Categories
(SeaMonkey :: MailNews: Message Display, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bugzilla, Assigned: emaijala+moz)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
843 bytes,
patch
|
jag+mozilla
:
review+
jag+mozilla
:
superreview+
sspitzer
:
approval1.4b+
|
Details | Diff | Splinter Review |
Build ID: 2002041503
Steps to reproduce:
1. Wait until the biff icon appears.
2. Double click it.
Note you can't maximize the resulting mail window.
Comment 1•24 years ago
|
||
If the mail window was maximized the last time you used mail, the resulting
window covers the entire screen, including the taskbar.
Comment 2•24 years ago
|
||
That's pretty weird. We are opening the new window through the same mail window
opening service we use in other places.
Nothing fancy here:
nsCOMPtr<nsIDOMWindow> newWindow;
rv = wwatch->OpenWindow(0, chromeurl.get(), "_blank",
"chrome,dialog=no,all", argsArray,
getter_AddRefs(newWindow));
I'll try digging around to see why we are having maximization issues. I was
easily able to reproduce the mail window coming up and obscuring the system tray
Status: NEW → ASSIGNED
Comment 3•24 years ago
|
||
I'm pretty sure I see this without hitting the alert link. I think I'm
alt-tabbing to the window, and it'll be covering toolbars that are supposed to
be "always on top" so i change the window to restore state, and then I am unable
to resize or maximize the window. Closing a reopening mail in the same session
does not fix it, but closing the app and restarting does. I'll try and get a
better testcase.
Comment 4•24 years ago
|
||
adding nsbeta1- per mail triage.
Now I add 'nsbeta1' keyword for Buffy. Sorry, it's faster to edit multiple bugs
at once than manually go to each and remove minus.
Keywords: nsbeta1
Comment 7•23 years ago
|
||
I see this on Windows 2000 too. Updating OS to earliest affected version (that
we know of), and updating summary to make bug easier to find. Also,
severity->minor - there is an easy and obvious work-around.
More detailed steps to reproduce:
1. Maximize mailnews window
2. Send yourself an e-mail
3. Wait for it to arrive and for 'new mail' icon to appear in system tray
4. Close mailnews window
5. Double-click new mail icon in system tray
Actual result:
Mailnews window opens, but it covers the entire screen including the taskbar.
The maximize/restore icon in the titlebar is greyed out. There is no way to
resize the window other than closing and reopening it.
Notes:
If step 1 is omitted (i.e. window is not maximised before you close it), it
restores to the previous size, but the maximize/restore icon is still greyed
out, and the window cannot be resized by grabbing an edge and dragging.
I have tested this with quicklaunch enabled only.
Severity: normal → minor
OS: Windows XP → Windows 2000
Summary: Mail window opened from biff icon can't be maximized → Mail window opened from biff icon (new mail notification in system tray) can't be maximized/minimised/resized
Comment 8•23 years ago
|
||
*** Bug 146672 has been marked as a duplicate of this bug. ***
Comment 10•23 years ago
|
||
*** Bug 157626 has been marked as a duplicate of this bug. ***
Comment 11•23 years ago
|
||
*** Bug 201187 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 12•23 years ago
|
||
*** Bug 192042 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 13•23 years ago
|
||
Since the first anniversary just passed some days ago, I'll take it. Patch
coming up.
Assignee: mscott → ere
Status: ASSIGNED → NEW
| Assignee | ||
Comment 14•23 years ago
|
||
This is a patch to fix the features parameter of the call to OpenWindow(). This
is the feature set normally used for mail window.
| Assignee | ||
Comment 15•23 years ago
|
||
Comment on attachment 122033 [details] [diff] [review]
Proposed patch
[Checkin: Comment 18]
Simple enough to make with a single r/sr?
Attachment #122033 -
Flags: superreview?(jaggernaut)
Comment 16•23 years ago
|
||
Comment on attachment 122033 [details] [diff] [review]
Proposed patch
[Checkin: Comment 18]
r+sr=jag
Attachment #122033 -
Flags: superreview?(jaggernaut)
Attachment #122033 -
Flags: superreview+
Attachment #122033 -
Flags: review+
Attachment #122033 -
Flags: approval1.4b?
Comment 17•23 years ago
|
||
Comment on attachment 122033 [details] [diff] [review]
Proposed patch
[Checkin: Comment 18]
a=sspitzer
Attachment #122033 -
Flags: approval1.4b? → approval1.4b+
| Assignee | ||
Comment 18•23 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 19•23 years ago
|
||
I broke opening a new mail window for a folder with this. This is being handled
in bug 204248.
Comment 20•23 years ago
|
||
*** Bug 205500 has been marked as a duplicate of this bug. ***
Comment 21•23 years ago
|
||
I'm still seeing this in 1.4beta (see bug 205500). Could someone verify this,
and reopen this bug?
Comment 22•23 years ago
|
||
*** Bug 165892 has been marked as a duplicate of this bug. ***
Comment 23•23 years ago
|
||
Joseph Wright, per your comment 21, I cannot even open a second mail window from
the systray biff icon,
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4b) Gecko/20030527
I presume that was the intended effect of the patch for this bug. Ere Maijala,
a little more descriptive prose when describing your patch, for the sake of
those of us QA'ing who don't necessarily read code, would be nice.
| Assignee | ||
Comment 24•23 years ago
|
||
You're right, sorry about that. So, when a new window is created, there's a
parameter telling what kind of a window it should be and what features it needs
to support. With this bug and the regression in bug 204248 fixed, the window
style should have all the required parameters. If you can't open a window at
all, then it's another problem. Basicly, if there already is a Mail Window,
double-clicking the mail icon should bring it up and if there isn't, a new
window should be created.
Comment 25•22 years ago
|
||
*** Bug 211216 has been marked as a duplicate of this bug. ***
Comment 26•22 years ago
|
||
Reopening based on dupe, and also on report in comment 21.
dupe was with
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4) Gecko/20030624
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 27•22 years ago
|
||
I don't see the problem on 2003063008 or a trunk debug build from yesterday.
Both running WinXP Pro.
Updated•21 years ago
|
Product: Browser → Seamonkey
Updated•18 years ago
|
Attachment #122033 -
Attachment description: Proposed patch → Proposed patch
[Checkin: Comment 18]
Comment 28•18 years ago
|
||
Bug 205500 was duplicated to bug 204248.
This bug (and bug 204248) has then been reverted by bug 382781.
***
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a5pre) Gecko/20070515 SeaMonkey/1.5a] (nightly) (W2Ksp4)
Seems to be WorksForMe.
R.Fixed (again)
Status: REOPENED → RESOLVED
Closed: 23 years ago → 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•