Bug 137661: Mail window opened from biff icon can't be maximized/minimized/resized and covers the full screen r+sr=jag a=sspitzer